--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.8.2",
+    "solid-collapse": "^1.1.0",
     "solid-icons": "^1.0.7",
     "solid-js": "^1.7.2",
     "solid-start": "^0.2.26",
